--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                 <div class="col-12 col-lg-6 mb-3 mb-lg-0 d-flex align-items-center">
                   <!-- Title -->
                   <div>
-                    <span class="d-block text-white text-uppercase mb-2">Greater Boston Home Inspections</span>
+                    <span class="d-block text-white text-uppercase mb-2" style="opacity: .6;">Greater Boston Home Inspections</span>
                     <h1 class="display-4 text-white mb-0 fw-bold">Inspect before you buy a home</h1>
                     <div class="my-4">
-                      <p class="lead text-white fw-normal">Get peace of mind with an educated decision about a property.</p>
+                      <p class="lead text-white fw-normal">Get peace of mind with an comprehensive home inspection before buying a property.</p>
                     </div>
                   </div>
                   <!-- End Title -->
@@ -114,26 +114,26 @@
     <!-- End Hero -->
 
     <!-- About -->
-    <section class="section py-5 my-5">
+    <section class="section py-5 my-5 pb-0">
       <div class="section-content container">
         <div class="text-center">
-          <h6 class="mb-1 text-uppercase text-muted">Meet Your Inspector</h6>
+          <img src="assets/images/profile.png" alt="photo" class="object-fit-cover shadow-lg rounded-circle">
+          <h6 class="mt-4 mb-1 text-uppercase text-muted">Meet Your Inspector</h6>
           <h1 class="mb-4">Your Name Here</h1>
         </div>
         <div class="row justify-content-center">
-          <div class="col-xl-9">
+          <div class="col-xl-6">
             <div class="row">
-              <div class="col-12 col-lg-6 mb-3 mb-lg-0">
-                <img src="assets/images/profile.png" alt="photo" class="w-100 h-100 object-fit-cover shadow-lg rounded">
-              </div>
-              <div class="col-12 col-lg-6">
-                <p>This is a great space to write long text about your company and your services. You can use this space to go into a little more detail about your company. Talk about your team and what services you provide.<br /><br />Tell your visitors the story of how you into this business and what makes you different from your competitors.</p>
+
+
+                <p class="lead fw-normal">This is a great space to write long text about your company and your services. You can use this space to go into a little more detail about your company. Talk about your team and what services you provide.<br /><br />Tell your visitors the story of how you into this business and what makes you different from your competitors.</p>
                 <ul class="list-unstyled mb-0">
                   <li class="mb-8 d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#3db36b" class="bi bi-check-circle-fill me-2" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/></svg>Qualification 1</li>
                   <li class="mb-8 d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#3db36b" class="bi bi-check-circle-fill me-2" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/></svg>Qualification 2</li>
                   <li class="d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#3db36b" class="bi bi-check-circle-fill me-2" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/></svg>Qualification 3</li>
                 </ul>
-              </div>
+
+
             </div>
           </div>
         </div>
@@ -148,8 +148,8 @@
           <div class="col-xl-9">
             <div class="row">
               <div class="col-12 col-lg-6">
-                <h4 class="mb-3">Sample Report</h4>
-                <p>This is a space to talk about your inspection's selling points. Do you offer termite inspections? Radon? Mold?</p>
+                <h1 class="mb-3">Sample Report</h1>
+                <p>This is a space to talk about your report's selling points. How extensive is it? How quickly can you get it to a customer?</p>
                 <ul class="list-unstyled">
                   <li class="mb-8 d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#3db36b" class="bi bi-check-circle-fill me-2" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/></svg>High-quality images to highlight what's important</li>
                   <li class="mb-8 d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#3db36b" class="bi bi-check-circle-fill me-2" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/></svg>View the report on your mobile devices</li>
@@ -168,41 +168,39 @@
     <!-- End Sample Report -->
 
     <!-- Pricing -->
-    <section class="section py-0 py-md-5 my-5">
+    <section class="section py-0 py-md-5 pt-md-0 my-5">
       <div class="section-content container">
 
         <div class="text-center">
           <h1 class="mb-4">Pricing</h1>
+          <p>This is a space to talk about your inspection's selling points.<br />Do you offer termite inspections? Radon? Mold?</p>
         </div>
 
-        <div class="row justify-content-center">
-          <div class="col-xl-9">
-
-            <div class="row align-items-center no-gutters">
-              <div class="col-12 col-md-6">
+        <div class="row justify-content-center mt-5">
+          <div class="col-xl-5">
 
                 <!-- Card -->
-                <div class="card shadow-lg mb-6 mb-md-0" style="z-index: 2;">
+                <div class="card h-100 shadow-lg mb-6 mb-md-0 p-4">
 
                   <!-- Body -->
                   <div class="card-body py-6 py-md-8">
                     <div class="row justify-content-center">
-                      <div class="col-12 col-xl-9">
+
 
                         <!-- Text -->
-                        <p class="text-center text-muted mb-0 mt-4">
-                          starting at
+                        <p class="text-center text-muted mb-0">
+                          Inspections starting at
                         </p>
 
                         <!-- Price -->
                         <div class="d-flex justify-content-center">
                           <span class="h2 mb-0 mt-2">$</span>
-                          <span class="price display-2 mb-3">400</span>
+                          <span class="price display-2 mb-1">400</span>
                         </div>
 
                         <!-- Features -->
-                        <div class="d-flex justify-content-center">
-                          <div class="badge mr-4 text-dark">
+                        <div class="d-flex ps-0">
+                          <div class="badge mr-4 text-dark ps-0">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
                               <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
                             </svg>
@@ -212,8 +210,8 @@
                             Feature 1
                           </p>
                         </div>
-                        <div class="d-flex justify-content-center">
-                          <div class="badge mr-4 text-dark">
+                        <div class="d-flex ps-0">
+                          <div class="badge mr-4 text-dark ps-0">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
                               <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
                             </svg>
@@ -223,8 +221,8 @@
                             Feature 2
                           </p>
                         </div>
-                        <div class="d-flex justify-content-center">
-                          <div class="badge mr-4 text-dark">
+                        <div class="d-flex ps-0">
+                          <div class="badge mr-4 text-dark ps-0">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
                               <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
                             </svg>
@@ -234,8 +232,8 @@
                             Feature 3
                           </p>
                         </div>
-                        <div class="d-flex justify-content-center">
-                          <div class="badge mr-4 text-dark">
+                        <div class="d-flex mb-2 ps-0">
+                          <div class="badge mr-4 text-dark ps-0">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
                               <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
                             </svg>
@@ -245,19 +243,10 @@
                             Feature 4
                           </p>
                         </div>
-                        <div class="d-flex justify-content-center mb-4">
-                          <div class="badge mr-4 text-dark">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
-                              <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
-                            </svg>
-                          </div>
 
-                          <p class="mb-1">
-                            Feature 5
-                          </p>
-                        </div>
+                        <div class="d-flex text-muted ps-0"><small>Does your home have specific needs? I offer variable pricing depending on the complexity of your home. Get in touch with us and we’ll figure out something that works for you.</small></div>
 
-                      </div>
+
                     </div> <!-- / .row -->
                   </div>
 
@@ -268,34 +257,7 @@
 
                 </div>
 
-              </div>
-              <div class="col-12 col-md-6 ml-md-n3">
 
-                <!-- Card -->
-                <div class="card shadow-lg">
-
-                  <!-- Body -->
-                  <div class="card-body py-6 py-md-8">
-                    <div class="row justify-content-center">
-                      <div class="col-12 col-xl-10">
-
-                        <!-- Text -->
-                        <p class="text-center text-muted mt-md-5 mb-0 mb-md-10">
-                          Does your home have specific needs? I offer variable pricing depending on the complexity of your home. Get in touch with us and we’ll figure out something that works for you.
-                        </p>
-
-                      </div>
-                    </div> <!-- / .row -->
-                  </div>
-
-                  <!-- Button -->
-                  <a href="#!" class="card-btn btn btn-block btn-lg">
-                    Get in touch
-                  </a>
-
-                </div>
-
-              </div>
 
           </div>
         </div>
@@ -359,7 +321,7 @@
                   <div>
                     <!-- Heading -->
                     <h4 class="text-white">
-                      Question 3
+                      Are you licensed?
                     </h4>
 
                     <!-- Text -->
@@ -373,7 +335,7 @@
                   <div>
                     <!-- Heading -->
                     <h4 class="text-white">
-                      Question 4
+                      How long have you been in business?
                     </h4>
 
                     <!-- Text -->
